--- a/portfolio/components/buttons.css
+++ b/portfolio/components/buttons.css
@@ -3,20 +3,52 @@
     outline: revert;
     box-sizing: border-box;
     display: inline-block;
-    text-transform: uppercase;
     cursor: pointer;
-    font-size: 0.9rem;
+    font-size: 0.88rem;
     line-height: 1.5;
-    font-weight: 600;
     letter-spacing: 2px;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: translate 180ms, opacity 180ms;
     opacity: 0.8;
-    transition: opacity 300ms, translate 300ms;
 }
 
-.btn:hover{
+*{
+    outline: 1px solid #333;
+}
+
+.btn:hover {
     opacity: 1;
 }
 
-.btn:active{
+.btn:active {
     translate: 1px 1px;
+}
+
+.btn--nav{
+    color: var(--text-color);
+    padding: 12px;
+}
+
+.btn--raised{
+    background-color: var(--primary);
+    padding: 12px 53px 12px 24px;
+    color: var(--black);
+    background-image: url("icons/arrow-right.svg");
+    background-repeat: no-repeat;
+    background-position: right 20px center;
+}
+
+.btn--line{
+    color: var(--text-color);
+    padding: 12px;
+}
+
+.btn--line::after{
+    box-sizing: border-box;
+    display: inline-block;
+    content: "";
+    height: 4px;
+    width: 100%;
+    border: 1px solid var(--primary);
 }
