--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,5 +1,8 @@
 @import url("components/container.css");
 @import url("components/typography.css");
+@import url("components/buttons.css");
+@import url("components/forms.css");
+@import url("components/helpers.css");
 
 * {
   box-sizing: border-box;
