Portfolio Project base finished

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,25 +1,7 @@
+@import url("components/_base.css");
+@import url("components/_default.css");
 @import url("components/container.css");
 @import url("components/typography.css");
 @import url("components/buttons.css");
 @import url("components/forms.css");
 @import url("components/helpers.css");
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: system-ui;
-  margin: 0;
-}
-
-input, textarea, button, select {
-  font: inherit;
-}
-
-:root {
-  --primary: #f2d544;
-  --black: #232020;
-  --text-color: white;
-  --gray: #999999;
-}
