--- a/portfolio/components/_base.css
+++ b/portfolio/components/_base.css
@@ -19,13 +19,19 @@
     box-sizing: border-box;
 }
 
-html{
-    color: var(--text-color);
+html {
     background-color: var(--dark-blue);
+    color: var(--text-color);
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    html {
+        scroll-behavior: smooth;
+    }
 }
 
 body {
-    font-family: "Popins", sans-serif;
+    font-family: "Poppins", sans-serif;
     margin: 0;
 }
 
@@ -36,6 +42,16 @@ input, textarea, button, select {
 ::selection {
     background-color: var(--primary);
     color: var(--black);
+}
+
+.light-theme{
+    background-color: var(--beige);
+    --text-color: var(--black);
+    --light-icon: var(--black);
+    --gray-light: var(--gray-dark);
+    --dark-icon: white;
+    --anchor-color: var(--black);
+
 }
 
 @media (max-width: 37.5rem) {
