--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -5,3 +5,5 @@
 @import url("components/buttons.css");
 @import url("components/forms.css");
 @import url("components/helpers.css");
+@import url("components/nav.css");
+@import url("components/toggle-theme.css");
