--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -7,3 +7,4 @@
 @import url("components/helpers.css");
 @import url("components/nav.css");
 @import url("components/toggle-theme.css");
+@import url("components/layouts.css");
