--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,10 +1,16 @@
-@import url("components/_base.css");
-@import url("components/_default.css");
-@import url("components/container.css");
-@import url("components/typography.css");
-@import url("components/buttons.css");
-@import url("components/forms.css");
-@import url("components/helpers.css");
-@import url("components/nav.css");
-@import url("components/toggle-theme.css");
-@import url("components/layouts.css");
+@import "components/_base.css";
+@import "components/_defaults.css";
+@import "components/helpers.css";
+@import "components/container.css";
+@import "components/typography.css";
+@import "components/layouts.css";
+@import "components/buttons.css";
+@import "components/tags.css";
+@import "components/nav.css";
+@import "components/portfolio.css";
+@import "components/forms.css";
+@import "components/footer.css";
+@import "components/scroll-down.css";
+@import "components/toggle-theme.css";
+@import "components/intro.css";
+@import "components/hire.css";
