--- a/portfolio/components/buttons.css
+++ b/portfolio/components/buttons.css
@@ -13,42 +13,37 @@
     opacity: 0.8;
 }
 
-*{
-    outline: 1px solid #333;
-}
-
 .btn:hover {
     opacity: 1;
 }
 
 .btn:active {
-    translate: 1px 1px;
+    translate: 1px, 1px;
 }
 
-.btn--nav{
+.btn--nav {
     color: var(--text-color);
     padding: 12px;
 }
 
-.btn--raised{
+.btn--raised {
     background-color: var(--primary);
-    padding: 12px 53px 12px 24px;
     color: var(--black);
-    background-image: url("icons/arrow-right.svg");
+    padding: 12px 53px 12px 24px;
+    background-image: url("assets/arrow-right.svg");
     background-repeat: no-repeat;
     background-position: right 20px center;
 }
-
-.btn--line{
+.btn--line {
     color: var(--text-color);
     padding: 12px;
 }
 
-.btn--line::after{
+.btn--line::after {
+    content: "";
     box-sizing: border-box;
     display: inline-block;
-    content: "";
+    border: 1px solid var(--primary);
     height: 4px;
     width: 100%;
-    border: 1px solid var(--primary);
 }
