--- a/my-bank/components/_base.css
+++ b/my-bank/components/_base.css
@@ -1,29 +1,30 @@
-@layer base {
-    :root {
-        --primary-color: #008288;
-        --light-text-color: #545f7a;
-        --dark-color: #0f1b2d;
-        --light-surface-color: #f2f2f2;
-        --light-border-color: #dae1f2;
-    }
+:root {
+    --primary-color: #008288;
+    --light-text-color: #545f7a;
+    --dark-color: #0f1b2d;
+    --light-surface-color: #f2f2f2;
+    --light-border-color: #dae1f2;
+}
 
-    * {
-        box-sizing: border-box;
-    }
+* {
+    box-sizing: border-box;
+}
 
-    body {
-        font-family: system-ui;
-        margin: 0;
-    }
+body {
+    font-family: system-ui;
+    margin: 0;
+}
 
-    input, textarea, button, select {
-        font: inherit;
-    }
+input,
+textarea,
+button,
+select {
+    font: inherit;
+}
 
-    /* it's important that this is in the base layer because of all: unset */
-    .ax-button {
-        all: unset;
-        outline: revert;
-        box-sizing: border-box;
-    }
+/* it's important that this is in the base layer because of all: unset */
+.ax-button {
+    all: unset;
+    outline: revert;
+    box-sizing: border-box;
 }
