--- a/my-bank/components/buttons.css
+++ b/my-bank/components/buttons.css
@@ -1,36 +1,34 @@
-@layer component {
-    .btn {
-        text-decoration: none;
-        border-radius: 4px;
-        padding: 15px 20px;
-        text-align: center;
-        letter-spacing: 0.4px;
-        display: inline-block;
-        cursor: pointer;
-        transition: opacity 200ms, translate 200ms;
-    }
+.btn {
+    text-decoration: none;
+    border-radius: 4px;
+    padding: 15px 20px;
+    text-align: center;
+    letter-spacing: 0.4px;
+    display: inline-block;
+    cursor: pointer;
+    transition: opacity 200ms, translate 200ms;
+}
 
-    .btn--raised {
-        background-color: var(--primary-color);
-        color: white;
-    }
+.btn--raised {
+    background-color: var(--primary-color);
+    color: white;
+}
 
-    .btn--link {
-        color: var(--primary-color);
-    }
+.btn--link {
+    color: var(--primary-color);
+}
 
-    .btn--block {
-        width: 100%;
-        max-width: 800px;
-        display: block;
-        margin-inline: auto;
-    }
+.btn--block {
+    width: 100%;
+    max-width: 800px;
+    display: block;
+    margin-inline: auto;
+}
 
-    .btn:hover {
-        opacity: 0.8;
-    }
+.btn:hover {
+    opacity: 0.8;
+}
 
-    .btn:active {
-        translate: 1px 1px;
-    }
+.btn:active {
+    translate: 1px, 1px;
 }
