--- a/my-bank/components/entry.css
+++ b/my-bank/components/entry.css
@@ -1,21 +1,25 @@
-@layer component {
-    .entry{
-        display: grid;
-        grid-template-columns: auto 1fr auto;
-        align-items: center;
-        gap: 10px;
-        margin-bottom: 20px;
-    }
-    .entry-details p{
-        margin: 5px;
-    }
+.entry {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 15px 0;
+}
+.entry-details {
+    flex: 1 1 auto;
+}
+.entry-name {
+    margin-top: 0;
+    margin-bottom: 6px;
+}
 
-    .entry-details .entry-description{
-        font-size: 0.87rem;
-        color: var(--light-text-color);
-    }
-    .entry-price{
-        font-weight: bold;
-        color: var(--dark-color);
-    }
+.entry-description {
+    color: var(--light-text-color);
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 0.87rem;
+}
+
+.entry-price {
+    color: var(--dark-color);
+    font-weight: bold;
 }
