--- a/my-bank/components/typography.css
+++ b/my-bank/components/typography.css
@@ -1,16 +1,14 @@
-@layer component {
-    .title--lg {
-        font-size: 1.87rem;
-    }
+.title--lg {
+    font-size: 1.87rem;
+}
 
-    .title {
-        font-size: 1.12rem;
-        font-weight: 600;
-        letter-spacing: 0.3px;
-    }
+.title {
+    font-size: 1.12rem;
+    font-weight: 600;
+    letter-spacing: 0.018rem;
+}
 
-    .text--dimmed {
-        color: var(--light-text-color);
-        font-size: 0.87rem;
-    }
+.text--dimmed {
+    color: var(--light-text-color);
+    font-size: 0.87rem;
 }
