--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -7,10 +7,16 @@ Dark green: #28b485
 
 */
 
-*{
+*,
+*::after,
+*::before{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
+}
+
+html{
+    font-size: 62.5%;
 }
 
 body{
@@ -19,7 +25,8 @@ body{
     font-size: 1rem;
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
+    box-sizing: border-box;
 }
 
 .header{
@@ -38,12 +45,12 @@ body{
 
 .logo-box{
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 
 .logo{
-    height: 35px;
+    height: 3.5rem;
 }
 
 .heading-primary-container{
@@ -59,22 +66,22 @@ body{
     text-align: center;
     text-transform: uppercase;
     backface-visibility: hidden;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
 
 .heading-primary-main{
-    font-size: 3.75rem;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 2.2rem;
+    letter-spacing: 3.5rem;
     display: block;
     animation: moveInLeft 1s ease-out;
 
 }
 
 .heading-primary-sub{
-    font-size: 1.25rem;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 1.1rem;
+    letter-spacing: 1.75rem;
     display: block;
     animation: moveInRight 1s ease-out;
 }
@@ -82,11 +89,11 @@ body{
 @keyframes moveInLeft {
     0%{
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
 
     80%{
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }
 
     100%{
@@ -98,11 +105,11 @@ body{
 @keyframes moveInRight {
     0%{
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
 
     80%{
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
 
     100%{
@@ -114,7 +121,7 @@ body{
 @keyframes moveInBottom {
     0%{
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
 
     100%{
@@ -127,21 +134,22 @@ body{
 .btn:visited{
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all .2s;
     position: relative;
+    font-size: 1.6rem;
 }
 
 .btn:hover{
     transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgb(0, 0, 0, 0.2)
+    box-shadow: 0 1rem 2rem rgb(0, 0, 0, 0.2)
 }
 
 .btn:active{
     transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgb(0, 0, 0, 0.2)
+    box-shadow: 0 .5rem 1rem rgb(0, 0, 0, 0.2)
 }
 
 .btn-white{
@@ -155,7 +163,7 @@ body{
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     inset: 0;
     z-index: -1;
